# kiwitu

./: Cargo.toml
bridge/: Cargo.toml
bridge/src/: lib.rs
front/: Cargo.toml
front/src/: lib.rs  main.rs
front/src/module/: chat.rs  mod.rs  modal.rs  roomlist.rs  userlist.rs
src/: game.rs  main.rs
