[package]
name = "kiwitu"
version = "0.1.0"
authors = ["kiwiyou"]
edition = "2018"

[dependencies]
actix = "0.8"
actix-web = "1.0"
actix-web-actors = "1.0"
actix-files = "0.1"
rand = "0.7"
log = "0.4"
serde = "1.0"
serde_json = "1.0"

simple_logger = "1.3"

bridge = { path = "bridge", features = ["server"] }

[workspace]
members = [
    "front",
    "bridge",
]